Fixed issue with very long URLs overflowing and additional style changes to table

--- a/src/App.css
+++ b/src/App.css
@@ -84,3 +84,22 @@ body {
 .invalid {
   border-color: red;
 }
+
+td, th {
+  word-break: break-all;
+}
+
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+
+.hits {
+  width: 20%;
+  max-width: 140px;
+}
+
+.tiny {
+  width: 30%;
+  max-width: 390px;
+}
